# CheckList_Test

./: .env.example  .gitignore  README.md
backend/: MODAL_DEPLOYMENT.md  check_db.py  pyproject.toml  requirements.txt  run_server.py  test_import.py  test_ingest.py  test_simple.py  test_user_docs.py
backend/data/checklists/: conditions.json  questions.json  results.json  templates.json
backend/src/: config.py  dependencies.py  main.py  modal_app.py
backend/src/models/: __init__.py  checklist.py
backend/src/pipelines/: ingest.py  rebuild_index.py
backend/src/routes/: checklist.py  comparison.py  files.py  rag.py
backend/src/services/: __init__.py  checklist_generator.py  claude.py  comparison.py  embeddings.py  llm.py  parser.py  storage.py  vector_db.py
backend/src/utils/: __init__.py
backend/tests/: test_german_examples.py
frontend/: next.config.js  package-lock.json  package.json  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/[...path]/: route.ts
frontend/app/checklist/conditions/: page.tsx
frontend/app/checklist/questions/: page.tsx
frontend/app/checklist/run/: page.tsx
frontend/app/checklist/templates/: page.tsx
frontend/app/rag/: page.tsx
frontend/app/results/: page.tsx
frontend/app/settings/: page.tsx
frontend/components/: GlassSurface.jsx  file-uploader.tsx  frosted-card.tsx  navigation.tsx  theme-toggle.tsx
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: Iridescence.tsx
frontend/src/lib/: api.ts
frontend/src/types/: index.ts
frontend/styles/: globals.css
(+6 files in other folders)
